# SerpApi-Buscas-Academicas

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Coleta_Academica_SerpApi.py  Extracao_Conteudo.py  Formatacao_Resultados.py  README.md  Ranking_Dominios_Compartilhamentos.py  SECURITY.md  pyproject.toml  requirements.txt
sprints/: SPRINT_S25_HIGIENIZACAO.md
src/scholarlens/: __init__.py  coleta.py  extracao.py  formatacao.py  ranking.py
tests/: test_formatacao.py  test_ranking.py
