[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "serpapi-buscas-academicas"
version = "1.0.0"
description = "Pipeline para coleta e análise de publicações acadêmicas via SerpApi"
readme = "README.md"
license = {text = "GPL-3.0-or-later"}
requires-python = ">=3.8"
dependencies = [
    "serpapi>=0.1.0",
    "aiohttp>=3.8.0",
    "beautifulsoup4>=4.12.0",
    "pandas>=2.0.0",
]
