[project]
name = "scholarlens"
version = "2.0.0"
description = "Pipeline para coleta e analise de publicacoes academicas via SerpApi"
readme = "README.md"
requires-python = ">=3.10"
license = "GPL-3.0-or-later"
authors = [
    { name = "Andre Farias", email = "andre.dsbf@gmail.com" },
]
dependencies = [
    "google-search-results>=2.4.2",
    "aiohttp>=3.8.0",
    "beautifulsoup4>=4.12.0",
    "pandas>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "ruff>=0.4",
]

[project.urls]
Repository = "https://github.com/AndreBFarias/ScholarLens"
Issues = "https://github.com/AndreBFarias/ScholarLens/issues"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
target-version = "py310"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
